# md4mathjax

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
md4mathjax/: __init__.py  mathjax_javascript_template  md4mathjax.py
tests/: example.html  example.md  test_out_html.py  test_print_string.py  test_print_string2.py  test_work_with_other_extensions.py
