[metadata]
name = md4mathjax
version = attr: md4mathjax.__version__
description = python-markdown extension for support mathjax
url=https://github.com/a358003542/md4mathjax
long_description = file: README.md
long_description_content_type=text/markdown
author=wanze
author_email=a358003542@outlook.com
maintainer=wanze
maintainer_email=a358003542@outlook.com
license=MIT
keywords = markdown, python, mathjax
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = md4mathjax

[options.entry_points]
markdown.extensions =
    md4mathjax = md4mathjax:Md4MathjaxExtension